# lastganganalyse

./: pyproject.toml  web_application.py
lastganganalyse/: data_loader.py  data_plot.py  statistics.py
